Changed the text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="banner">
     <div class="container">
       <h1> MaYoga </h1>
-      <p> Be guided through your own yoga flows </p>
+      <p> Be your own yoga coach </p>
       <a href="#" class="btn-mayoga"> Try now </a>
     </div>
   </div>
@@ -29,7 +29,7 @@
     <div class="card">
       <img src="images/clock.jpeg" alt="Clock" class="card-image">
       <h2> Schedule your yoga moment </h2>
-      <p> Connect your calendar to plan ahead your sessions.</p>
+      <p> Connect your calendar to plan your sessions in advance.</p>
     </div>
 
     <div class="card">
