Styled the footer

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </div>
 
   <div class="footer">
-    <p>Made with <i class="fas fa-heart"></i> by <a href="https://inesb18.github.io/profile/" class=""> Inès </a></p>
+    <p>Made at Le Wagon with <i class="fas fa-heart"></i> by <a href="https://inesb18.github.io/profile/" class="footer-link"> Inès </a></p>
   </div>
 
 </body>
